<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.area51.semana8_1.MainActivity" >

    <item
        android:showAsAction="ifRoom"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/btnNormal"
                android:showAsAction="always"
                android:title="@string/mapNormal"/>
            <item
                android:id="@+id/btnHibrido"
                android:showAsAction="always"
                android:title="@string/mapHibrido"/>
            <item
                android:id="@+id/btnTerreno"
                android:showAsAction="always"
                android:title="@string/mapTerreno"/>
            <item
                android:id="@+id/btnSatelite"
                android:showAsAction="always"
                android:title="@string/mapSatelital"/>
        </menu>
    </item>

</menu>